bin/testsuite/tests/compiler/src/errors/compiler2354.swg
#global testerror "Err0224"

//#[Swag.Mixin]
func mkVar(name: string, value: s32)
{
    #ast "var titi = 0"
}

mkVar("titi", 555)
